@@ -7,8 +7,7 @@ export(exec_internal)
 export(exec_status)
 export(exec_wait)
 export(sys_config)
-importFrom(grDevices,dev.cur)
-importFrom(grDevices,dev.off)
+importFrom(grDevices,graphics.off)
 importFrom(grDevices,pdf)
 useDynLib(sys,C_execute)
 useDynLib(sys,R_aa_change_profile)
