@@ -1,6 +1,7 @@
 1.4
   - Fix bug when 'timeout' was given as integer instead of double
   - Workaround undefined RLIMIT_AS on OpenBSD
+  - Use graphics.off() instead of dev.off() to shut down all graphics devices
 
 1.3
   - Use AppArmor (required) on Debian/Ubuntu in eval_safe()
